<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="50dp"
        android:drawableTop="@drawable/about"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:text="@string/about_title_text"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/hakkinda_aciklama"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/gizlilik_politikasi" />

    <TextView
        android:id="@+id/privacy_pol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="15dp"
        android:drawableStart="@drawable/ic_priority"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:text="@string/gizlilik_oku"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/for_gelistiriciler" />

    <TextView
        android:id="@+id/gitHubKodlari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="15dp"
        android:drawableStart="@mipmap/github_icon"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:text="@string/app_codes_about"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="30dp"
        android:background="@android:color/darker_gray" />
</LinearLayout>