<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nonimportant_textview1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/choose_title"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/nonimportant_textview1"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/dialog_with_my_map"
                style="@style/ChooseDirectionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/logo_50dp"
                android:text="@string/choose_my_app" />

            <Button
                android:id="@+id/dialog_with_google_maps"
                style="@style/ChooseDirectionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dialog_with_my_map"
                android:drawableStart="@drawable/google_maps"
                android:text="@string/choose_my_map" />

            <Button
                android:id="@+id/dialog_with_navigation"
                style="@style/ChooseDirectionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dialog_with_google_maps"
                android:drawableStart="@drawable/directions_logo"
                android:text="@string/choose_nav" />
        </RelativeLayout>

    </RelativeLayout>

</ScrollView>