<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/bus_logo" />

            <TextView
                android:id="@+id/station_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:layout_toStartOf="@id/station_favorite_inside"
                android:layout_toEndOf="@+id/image1"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/station_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/station_name"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/image1"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.like.LikeButton
                android:id="@+id/station_favorite_inside"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="10dp"
                app:icon_size="20dp"
                app:icon_type="star" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/station_distance"
                android:layout_marginStart="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@id/station_favorite_inside"
                android:layout_toEndOf="@id/image1"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/gecen_otobusler"
                    style="@style/ButtonChooseTab1Stations"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_shape_orange"
                    android:text="@string/gececek_otobusler" />


                <Button
                    android:id="@+id/gecen_hatlar"
                    style="@style/ButtonChooseTab1Stations"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_shape_hatlar"
                    android:text="@string/gecen_hatlar" />

                <Button
                    android:id="@+id/yol_tarifi"
                    style="@style/ButtonChooseTab1Stations"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_shape_primary"
                    android:text="@string/yol_tarifi" />


            </LinearLayout>

            <!--      <Button
                      android:id="@+id/gecen_otobusler"
                      style="@style/ButtonChooseTab1Stations"
                      android:layout_marginStart="1dp"
                      android:layout_toEndOf="@id/image1"
                      android:background="@drawable/rounded_shape_orange"
                      android:text="@string/gececek_otobusler" />

                  <Button
                      android:id="@+id/gecen_hatlar"
                      style="@style/ButtonChooseTab1Stations"
                      android:layout_marginStart="10dp"
                      android:layout_toStartOf="@id/yol_tarifi"
                      android:layout_toEndOf="@id/gecen_otobusler"
                      android:background="@drawable/rounded_shape_hatlar"
                      android:text="@string/gecen_hatlar" />

                  <Button
                      android:id="@+id/yol_tarifi"
                      style="@style/ButtonChooseTab1Stations"
                      android:layout_marginStart="10dp"
                      android:layout_marginEnd="15dp"
                      android:layout_toStartOf="@id/station_favorite_inside"
                      android:background="@drawable/rounded_shape_primary"
                      android:text="@string/yol_tarifi" />
           !-->

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>